cp project/force-app/main/default/objects/Partner_Audit_Log__c/Partner_Audit_Log__c.object-meta.xml
<CustomObject>
    <description>Immutable audit trail tracking high-privilege partner lifecycle events</description>
    <label>Partner Audit Log</label>
    <nameField>
        <displayFormat>AUDIT-{000000}</displayFormat>
        <label>Audit Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>