cp project/force-app/main/default/objects/Partner_Audit_Log__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Partner Approved</fullName>
                </value>
                <value>
                    <fullName>Partner Rejected</fullName>
                </value>
                <value>
                    <fullName>KYC Approved</fullName>
                </value>
                <value>
                    <fullName>KYC Rejected</fullName>
                </value>
                <value>
                    <fullName>Project Access Granted</fullName>
                </value>
                <value>
                    <fullName>Project Access Revoked</fullName>
                </value>
                <value>
                    <fullName>Lead Registered</fullName>
                    <default>true</default>
                    <label>Lead Registered</label>
                </value>
                <value>
                    <fullName>Lead Protected</fullName>
                </value>
                <value>
                    <fullName>Lead Protection Expired</fullName>
                </value>
                <value>
                    <fullName>Duplicate Lead Blocked</fullName>
                </value>
                <value>
                    <fullName>Unit Reserved</fullName>
                </value>
                <value>
                    <fullName>Unit Booked</fullName>
                </value>
                <value>
                    <fullName>Commission Approved</fullName>
                </value>
                <value>
                    <fullName>Commission Rejected</fullName>
                </value>
                <value>
                    <fullName>Commission Paid</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>