cp project/force-app/main/default/objects/Partner_Audit_Log__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Target Object</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>