cp project/force-app/main/default/objects/Partner_Audit_Log__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason / Justification</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>