cp project/force-app/main/default/objects/Partner_Audit_Log__c/fields/Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_ID__c</fullName>
    <label>Target Record ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>