cp project/force-app/main/default/objects/Partner_Audit_Log__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Actor User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partner_Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>